CHROMIUM: drm/rockchip: Do not call dma_buf_sg() twice on PRIME import path

Current implementation of Rockchip DRM's .gem_prime_import_sg_table()
callback calls dma_buf_sg(). However, drm_gem_prime_import() helper
already calls dma_buf_map_attachment(), which calls into exporter's
mapping code that is expected to map the buffer for the importer and
return the mapped sg_table. Calling dma_map_sg() on an already mapped
sg_table is an error and leads to failures.

Fix it by removing the redundant calls and respective calls to
dma_unmap_sg().

BUG=chromium:759408
TEST=Open crosvideo.appspot.com on veyron_minnie, load VP8 DASH 30 FPS
  stream and make sure the whole video tag is visible to trigger the
  import.

Change-Id: I05ca2b8cccdb32778fe0715b1ab980d2699b8595
Signed-off-by: Tomasz Figa <tfiga@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/640434
Commit-Ready: Kristian H. Kristensen <hoegsberg@chromium.org>
Reviewed-by: Kristian H. Kristensen <hoegsberg@chromium.org>